@@ -1,4 +1,6 @@
 v0.12
+	* ADD : continue road if selected node belongs to only 1 road and is at one end
+	* ADD : MRU for opened and imported files
 	* ADD : menu option to show/hide a selectable relation bounding box
 	* ADD : preference option for focus/hover/relations colors
 	* ADD : Create one layer per track during GPX import
